--- a/DinDin Food App/PizzaModule/PizzaViews/PizzaTableViewCell.xib
+++ b/DinDin Food App/PizzaModule/PizzaViews/PizzaTableViewCell.xib
@@ -1,21 +1,114 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PizzaTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="432" id="KGk-i7-Jjw" customClass="PizzaTableViewCell" customModule="DinDin_Food_App" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="432"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="432"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HpS-kt-fyU">
+                        <rect key="frame" x="16" y="16" width="288" height="245"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="288" id="RiA-SD-7JO"/>
+                            <constraint firstAttribute="height" constant="245" id="jSS-4j-eb8"/>
+                        </constraints>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kah-dW-OQp">
+                        <rect key="frame" x="16" y="276" width="288" height="128"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jollof Rice" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J6Y-w3-gGn">
+                                <rect key="frame" x="8" y="2" width="272" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="91P-oY-NzN"/>
+                                    <constraint firstAttribute="width" constant="272" id="M6d-iY-wHE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ior-fc-0Lo">
+                                <rect key="frame" x="8" y="36" width="272" height="43"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="43" id="Hbp-X7-Cve"/>
+                                    <constraint firstAttribute="width" constant="272" id="auM-Oi-T3f"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZJx-hR-JNh">
+                                <rect key="frame" x="188" y="87" width="92" height="36"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="92" id="0qi-Ic-W8c"/>
+                                    <constraint firstAttribute="height" constant="36" id="ifW-2v-IRf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="17"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vMU-bo-MFC">
+                                <rect key="frame" x="0.0" y="87" width="168" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="7GA-Cx-9FX"/>
+                                    <constraint firstAttribute="width" constant="168" id="hlJ-3N-ypY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="ZJx-hR-JNh" secondAttribute="bottom" constant="5" id="1aP-yw-8L7"/>
+                            <constraint firstAttribute="width" constant="288" id="5p3-2H-R5X"/>
+                            <constraint firstItem="vMU-bo-MFC" firstAttribute="top" secondItem="Ior-fc-0Lo" secondAttribute="bottom" constant="8" id="9Fq-Ab-FbO"/>
+                            <constraint firstAttribute="height" constant="128" id="9yw-Kv-dGV"/>
+                            <constraint firstItem="Ior-fc-0Lo" firstAttribute="leading" secondItem="kah-dW-OQp" secondAttribute="leading" constant="8" id="AKk-OD-I2t"/>
+                            <constraint firstItem="ZJx-hR-JNh" firstAttribute="top" secondItem="Ior-fc-0Lo" secondAttribute="bottom" constant="8" id="DYA-Dl-It8"/>
+                            <constraint firstItem="Ior-fc-0Lo" firstAttribute="top" secondItem="J6Y-w3-gGn" secondAttribute="bottom" id="HUC-jn-LgK"/>
+                            <constraint firstItem="ZJx-hR-JNh" firstAttribute="leading" secondItem="vMU-bo-MFC" secondAttribute="trailing" constant="20" id="O0L-nC-zO9"/>
+                            <constraint firstAttribute="trailing" secondItem="Ior-fc-0Lo" secondAttribute="trailing" constant="8" id="UqQ-do-XZN"/>
+                            <constraint firstAttribute="trailing" secondItem="ZJx-hR-JNh" secondAttribute="trailing" constant="8" id="XA9-Ai-xOA"/>
+                            <constraint firstItem="J6Y-w3-gGn" firstAttribute="leading" secondItem="kah-dW-OQp" secondAttribute="leading" constant="8" id="YNZ-QY-8Cr"/>
+                            <constraint firstItem="vMU-bo-MFC" firstAttribute="leading" secondItem="kah-dW-OQp" secondAttribute="leading" id="dqk-ej-btT"/>
+                            <constraint firstAttribute="bottom" secondItem="vMU-bo-MFC" secondAttribute="bottom" constant="5" id="fzw-o9-pwq"/>
+                            <constraint firstAttribute="trailing" secondItem="J6Y-w3-gGn" secondAttribute="trailing" constant="8" id="jzR-Ct-mhP"/>
+                            <constraint firstItem="J6Y-w3-gGn" firstAttribute="top" secondItem="kah-dW-OQp" secondAttribute="top" constant="2" id="zwE-CJ-uIp"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="HpS-kt-fyU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="7CI-bq-pyR"/>
+                    <constraint firstItem="kah-dW-OQp" firstAttribute="top" secondItem="HpS-kt-fyU" secondAttribute="bottom" constant="15" id="7fw-ho-kvN"/>
+                    <constraint firstItem="kah-dW-OQp" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="ASi-Ok-3zc"/>
+                    <constraint firstItem="kah-dW-OQp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="NEA-TI-Dga"/>
+                    <constraint firstAttribute="trailing" secondItem="HpS-kt-fyU" secondAttribute="trailing" constant="16" id="NhC-He-nre"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="kah-dW-OQp" secondAttribute="bottom" constant="17" id="nhd-fc-hNX"/>
+                    <constraint firstItem="HpS-kt-fyU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="uzI-cI-D7S"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="buyPizza" destination="ZJx-hR-JNh" id="wsO-pN-e4v"/>
+                <outlet property="pizzaDescriptton" destination="Ior-fc-0Lo" id="D9j-Ip-5Iz"/>
+                <outlet property="pizzaImage" destination="HpS-kt-fyU" id="MA9-GD-zmi"/>
+                <outlet property="pizzaName" destination="J6Y-w3-gGn" id="odH-lN-tIH"/>
+                <outlet property="pizzaPrice" destination="vMU-bo-MFC" id="ffS-sB-QLs"/>
+            </connections>
+            <point key="canvasLocation" x="27.536231884057973" y="219.64285714285714"/>
         </tableViewCell>
     </objects>
 </document>
