--- a/DinDin Food App/DrinksModule/DrinksView/DrinksTableViewCell.xib
+++ b/DinDin Food App/DrinksModule/DrinksView/DrinksTableViewCell.xib
@@ -1,21 +1,114 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DrinksTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DrinksTableViewCell" customModule="DinDin_Food_App" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="432"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="432"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UlJ-2a-j7I">
+                        <rect key="frame" x="16" y="16" width="288" height="245"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="245" id="Z16-bt-Ixi"/>
+                            <constraint firstAttribute="width" constant="288" id="k9t-sV-xTd"/>
+                        </constraints>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ear-Ur-Ivp">
+                        <rect key="frame" x="16" y="276" width="288" height="128"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jollof Rice" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CPb-e9-zBs">
+                                <rect key="frame" x="8" y="2" width="272" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="272" id="3gb-Rz-NPu"/>
+                                    <constraint firstAttribute="height" constant="34" id="aLp-4I-8XW"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQy-0J-bCo">
+                                <rect key="frame" x="8" y="36" width="272" height="43"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="272" id="vNq-pu-AtS"/>
+                                    <constraint firstAttribute="height" constant="43" id="vfx-9b-7KP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yt3-bd-BKJ">
+                                <rect key="frame" x="188" y="87" width="92" height="36"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="3RJ-Fn-J57"/>
+                                    <constraint firstAttribute="width" constant="92" id="Mce-jA-mFP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="17"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QaB-Er-eTJ">
+                                <rect key="frame" x="0.0" y="87" width="168" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="168" id="JEj-TK-OYu"/>
+                                    <constraint firstAttribute="height" constant="36" id="Ycw-5L-kM8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="CPb-e9-zBs" secondAttribute="trailing" constant="8" id="1UV-p1-K6s"/>
+                            <constraint firstAttribute="height" constant="128" id="2n7-i7-VbL"/>
+                            <constraint firstAttribute="trailing" secondItem="yt3-bd-BKJ" secondAttribute="trailing" constant="8" id="4Ch-BL-eiM"/>
+                            <constraint firstItem="bQy-0J-bCo" firstAttribute="leading" secondItem="Ear-Ur-Ivp" secondAttribute="leading" constant="8" id="GTQ-BF-Ger"/>
+                            <constraint firstItem="QaB-Er-eTJ" firstAttribute="leading" secondItem="Ear-Ur-Ivp" secondAttribute="leading" id="IWf-X1-L6g"/>
+                            <constraint firstItem="CPb-e9-zBs" firstAttribute="top" secondItem="Ear-Ur-Ivp" secondAttribute="top" constant="2" id="Lcz-4D-vTU"/>
+                            <constraint firstAttribute="width" constant="288" id="SgC-NA-IFn"/>
+                            <constraint firstAttribute="trailing" secondItem="bQy-0J-bCo" secondAttribute="trailing" constant="8" id="UVu-Vm-7eO"/>
+                            <constraint firstItem="bQy-0J-bCo" firstAttribute="top" secondItem="CPb-e9-zBs" secondAttribute="bottom" id="Ykd-Nc-BgT"/>
+                            <constraint firstAttribute="bottom" secondItem="QaB-Er-eTJ" secondAttribute="bottom" constant="5" id="Zdd-MX-WnE"/>
+                            <constraint firstAttribute="bottom" secondItem="yt3-bd-BKJ" secondAttribute="bottom" constant="5" id="fpP-wi-rh6"/>
+                            <constraint firstItem="QaB-Er-eTJ" firstAttribute="top" secondItem="bQy-0J-bCo" secondAttribute="bottom" constant="8" id="hc6-k5-G7c"/>
+                            <constraint firstItem="yt3-bd-BKJ" firstAttribute="top" secondItem="bQy-0J-bCo" secondAttribute="bottom" constant="8" id="kxO-sg-hdq"/>
+                            <constraint firstItem="yt3-bd-BKJ" firstAttribute="leading" secondItem="QaB-Er-eTJ" secondAttribute="trailing" constant="20" id="s60-En-NVH"/>
+                            <constraint firstItem="CPb-e9-zBs" firstAttribute="leading" secondItem="Ear-Ur-Ivp" secondAttribute="leading" constant="8" id="swk-WU-xXE"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="Ear-Ur-Ivp" firstAttribute="top" secondItem="UlJ-2a-j7I" secondAttribute="bottom" constant="15" id="8V4-7F-Tr8"/>
+                    <constraint firstItem="Ear-Ur-Ivp" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="IKj-CA-TuA"/>
+                    <constraint firstItem="UlJ-2a-j7I" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Pfi-Be-z0F"/>
+                    <constraint firstItem="UlJ-2a-j7I" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="eCy-Wb-uvi"/>
+                    <constraint firstAttribute="trailing" secondItem="UlJ-2a-j7I" secondAttribute="trailing" constant="16" id="n4k-Ny-TkX"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Ear-Ur-Ivp" secondAttribute="bottom" constant="17" id="wJq-58-Y6R"/>
+                    <constraint firstItem="Ear-Ur-Ivp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="xuA-0h-iwP"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="buyDrink" destination="yt3-bd-BKJ" id="LE3-dc-GoB"/>
+                <outlet property="drinkDescription" destination="bQy-0J-bCo" id="7Lz-6E-gaO"/>
+                <outlet property="drinkImage" destination="UlJ-2a-j7I" id="swK-4C-Vv1"/>
+                <outlet property="drinkName" destination="CPb-e9-zBs" id="vvQ-PP-VSS"/>
+                <outlet property="drinkPrice" destination="QaB-Er-eTJ" id="frq-m0-42s"/>
+            </connections>
+            <point key="canvasLocation" x="28" y="104"/>
         </tableViewCell>
     </objects>
 </document>
