--- a/DinDin Food App/SushiModule/SushiViews/SushiTableViewCell.xib
+++ b/DinDin Food App/SushiModule/SushiViews/SushiTableViewCell.xib
@@ -1,21 +1,114 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="SushiTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="432" id="KGk-i7-Jjw" customClass="SushiTableViewCell" customModule="DinDin_Food_App" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="432"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="432"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G3l-A7-dOO">
+                        <rect key="frame" x="16" y="16" width="288" height="245"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="288" id="PTN-Cj-tKw"/>
+                            <constraint firstAttribute="height" constant="245" id="Po7-L8-I0W"/>
+                        </constraints>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rsx-BR-Jwb">
+                        <rect key="frame" x="16" y="276" width="288" height="128"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jollof Rice" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gxa-Y6-Vln">
+                                <rect key="frame" x="8" y="2" width="272" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="IcV-XU-SLJ"/>
+                                    <constraint firstAttribute="width" constant="272" id="Ni6-Qc-Y7b"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4L2-dU-cgz">
+                                <rect key="frame" x="8" y="36" width="272" height="43"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="272" id="3I2-v0-NhO"/>
+                                    <constraint firstAttribute="height" constant="43" id="zK7-5M-Iea"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uSZ-dB-1md">
+                                <rect key="frame" x="188" y="87" width="92" height="36"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="5dX-OT-V3e"/>
+                                    <constraint firstAttribute="width" constant="92" id="zJg-Bn-Xs6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="17"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i03-35-tB6">
+                                <rect key="frame" x="0.0" y="87" width="168" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="xkP-fU-ir3"/>
+                                    <constraint firstAttribute="width" constant="168" id="yWd-na-Mdx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="uSZ-dB-1md" secondAttribute="bottom" constant="5" id="0rd-aN-plU"/>
+                            <constraint firstAttribute="trailing" secondItem="gxa-Y6-Vln" secondAttribute="trailing" constant="8" id="47L-Lc-RBd"/>
+                            <constraint firstItem="uSZ-dB-1md" firstAttribute="leading" secondItem="i03-35-tB6" secondAttribute="trailing" constant="20" id="CC2-14-uqd"/>
+                            <constraint firstAttribute="trailing" secondItem="uSZ-dB-1md" secondAttribute="trailing" constant="8" id="Et5-5I-66u"/>
+                            <constraint firstItem="gxa-Y6-Vln" firstAttribute="leading" secondItem="Rsx-BR-Jwb" secondAttribute="leading" constant="8" id="Ho7-dP-CLL"/>
+                            <constraint firstAttribute="trailing" secondItem="4L2-dU-cgz" secondAttribute="trailing" constant="8" id="Jhh-Of-nei"/>
+                            <constraint firstItem="gxa-Y6-Vln" firstAttribute="top" secondItem="Rsx-BR-Jwb" secondAttribute="top" constant="2" id="Jnv-uj-3UG"/>
+                            <constraint firstItem="i03-35-tB6" firstAttribute="leading" secondItem="Rsx-BR-Jwb" secondAttribute="leading" id="OwD-HN-Hjr"/>
+                            <constraint firstItem="i03-35-tB6" firstAttribute="top" secondItem="4L2-dU-cgz" secondAttribute="bottom" constant="8" id="SOs-1M-Rnz"/>
+                            <constraint firstAttribute="bottom" secondItem="i03-35-tB6" secondAttribute="bottom" constant="5" id="UT3-aa-fQ5"/>
+                            <constraint firstItem="4L2-dU-cgz" firstAttribute="top" secondItem="gxa-Y6-Vln" secondAttribute="bottom" id="VLQ-ak-muF"/>
+                            <constraint firstItem="4L2-dU-cgz" firstAttribute="leading" secondItem="Rsx-BR-Jwb" secondAttribute="leading" constant="8" id="YHw-su-xY8"/>
+                            <constraint firstItem="uSZ-dB-1md" firstAttribute="top" secondItem="4L2-dU-cgz" secondAttribute="bottom" constant="8" id="cmJ-AT-rz9"/>
+                            <constraint firstAttribute="width" constant="288" id="jU0-mp-neQ"/>
+                            <constraint firstAttribute="height" constant="128" id="rb6-CI-6OM"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="G3l-A7-dOO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="C2Y-Dk-nGd"/>
+                    <constraint firstAttribute="trailing" secondItem="G3l-A7-dOO" secondAttribute="trailing" constant="16" id="ENF-Pm-A3E"/>
+                    <constraint firstItem="Rsx-BR-Jwb" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="Kmg-b3-553"/>
+                    <constraint firstItem="Rsx-BR-Jwb" firstAttribute="top" secondItem="G3l-A7-dOO" secondAttribute="bottom" constant="15" id="WBa-Q7-CsY"/>
+                    <constraint firstItem="Rsx-BR-Jwb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="gMT-NL-pwC"/>
+                    <constraint firstItem="G3l-A7-dOO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="naM-89-3B2"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Rsx-BR-Jwb" secondAttribute="bottom" constant="17" id="rPQ-c2-jwJ"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="buySushiButton" destination="uSZ-dB-1md" id="VIx-3R-pAJ"/>
+                <outlet property="sushiDescription" destination="4L2-dU-cgz" id="bfN-jj-MnB"/>
+                <outlet property="sushiImage" destination="G3l-A7-dOO" id="E4K-9b-pF3"/>
+                <outlet property="sushiName" destination="gxa-Y6-Vln" id="XBW-7a-aQd"/>
+                <outlet property="sushiPrice" destination="i03-35-tB6" id="nEv-ul-GuM"/>
+            </connections>
+            <point key="canvasLocation" x="192.75362318840581" y="213.61607142857142"/>
         </tableViewCell>
     </objects>
 </document>
