--- a/DinDin Food App/Base.lproj/Main.storyboard
+++ b/DinDin Food App/Base.lproj/Main.storyboard
@@ -338,29 +338,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xeh-EB-PaL">
-                                <rect key="frame" x="0.0" y="99" width="414" height="797"/>
+                                <rect key="frame" x="0.0" y="117" width="414" height="779"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="414" id="IIW-J3-BVL"/>
-                                    <constraint firstAttribute="height" constant="797" id="zFv-gp-jdq"/>
+                                    <constraint firstAttribute="height" constant="779" id="zFv-gp-jdq"/>
                                 </constraints>
                                 <connections>
                                     <segue destination="xQB-SI-ViM" kind="embed" id="D81-zq-fTS"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1IS-ZD-zvv">
-                                <rect key="frame" x="0.0" y="99" width="414" height="797"/>
+                                <rect key="frame" x="0.0" y="117" width="414" height="779"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="414" id="6MB-Sb-jw8"/>
-                                    <constraint firstAttribute="height" constant="797" id="cMJ-Tt-sPa"/>
+                                    <constraint firstAttribute="height" constant="779" id="cMJ-Tt-sPa"/>
                                 </constraints>
                                 <connections>
                                     <segue destination="v3I-30-HEV" kind="embed" id="kRj-6Y-avA"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gnx-jH-9vZ">
-                                <rect key="frame" x="0.0" y="99" width="414" height="797"/>
+                                <rect key="frame" x="0.0" y="117" width="414" height="779"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="797" id="I7i-I1-oKc"/>
+                                    <constraint firstAttribute="height" constant="779" id="I7i-I1-oKc"/>
                                     <constraint firstAttribute="width" constant="414" id="der-Aa-PxJ"/>
                                 </constraints>
                                 <connections>
@@ -380,7 +380,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D16-MO-3Yd">
-                                <rect key="frame" x="0.0" y="44" width="414" height="45"/>
+                                <rect key="frame" x="0.0" y="64" width="414" height="45"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cart" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AfA-Op-hPX">
                                         <rect key="frame" x="8" y="0.0" width="88" height="45"/>
@@ -428,6 +428,19 @@
                                     <constraint firstItem="D18-fj-mN0" firstAttribute="top" secondItem="D16-MO-3Yd" secondAttribute="top" id="ydv-nt-FzR"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sIK-2c-XTw">
+                                <rect key="frame" x="0.0" y="48" width="118" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="3he-sc-szW"/>
+                                    <constraint firstAttribute="width" constant="118" id="SVs-Gb-bUS"/>
+                                </constraints>
+                                <state key="normal" title="Menu" image="icons8-back">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="backToMenuFunction:" destination="3vJ-rX-A2y" eventType="touchUpInside" id="k63-Xg-cAh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="OhU-RH-FpB"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -438,11 +451,13 @@
                             <constraint firstItem="OhU-RH-FpB" firstAttribute="trailing" secondItem="gVj-1H-iHj" secondAttribute="trailing" constant="20" id="K7h-Ua-Enc"/>
                             <constraint firstItem="OhU-RH-FpB" firstAttribute="bottom" secondItem="gVj-1H-iHj" secondAttribute="bottom" constant="16" id="KhM-iF-Pwj"/>
                             <constraint firstAttribute="bottom" secondItem="1IS-ZD-zvv" secondAttribute="bottom" id="OGz-0i-jPY"/>
+                            <constraint firstItem="D16-MO-3Yd" firstAttribute="top" secondItem="sIK-2c-XTw" secondAttribute="bottom" constant="-6" id="QOA-4U-QXc"/>
                             <constraint firstItem="D16-MO-3Yd" firstAttribute="leading" secondItem="OhU-RH-FpB" secondAttribute="leading" id="Ymz-vI-Ein"/>
-                            <constraint firstItem="Xeh-EB-PaL" firstAttribute="top" secondItem="D16-MO-3Yd" secondAttribute="bottom" constant="10" id="h1H-3Y-pSV"/>
+                            <constraint firstItem="sIK-2c-XTw" firstAttribute="top" secondItem="OhU-RH-FpB" secondAttribute="top" constant="4" id="ZdW-c7-2cn"/>
+                            <constraint firstItem="Xeh-EB-PaL" firstAttribute="top" secondItem="D16-MO-3Yd" secondAttribute="bottom" constant="8" id="h1H-3Y-pSV"/>
                             <constraint firstItem="Gnx-jH-9vZ" firstAttribute="trailing" secondItem="OhU-RH-FpB" secondAttribute="trailing" id="kr9-UV-wBY"/>
                             <constraint firstItem="1IS-ZD-zvv" firstAttribute="trailing" secondItem="OhU-RH-FpB" secondAttribute="trailing" id="m2N-1V-LFs"/>
-                            <constraint firstItem="D16-MO-3Yd" firstAttribute="top" secondItem="OhU-RH-FpB" secondAttribute="top" id="nUQ-ZN-hAS"/>
+                            <constraint firstItem="sIK-2c-XTw" firstAttribute="leading" secondItem="OhU-RH-FpB" secondAttribute="leading" id="nQm-pD-YfZ"/>
                             <constraint firstItem="1IS-ZD-zvv" firstAttribute="leading" secondItem="OhU-RH-FpB" secondAttribute="leading" id="oEa-ds-Z0u"/>
                             <constraint firstAttribute="bottom" secondItem="Gnx-jH-9vZ" secondAttribute="bottom" id="tLM-fO-s2p"/>
                             <constraint firstAttribute="bottom" secondItem="Xeh-EB-PaL" secondAttribute="bottom" id="uDh-9Y-sXM"/>
@@ -453,6 +468,7 @@
                         <barButtonItem key="backBarButtonItem" title="Menu" id="cEc-aY-fn3"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="backToMenuButton" destination="sIK-2c-XTw" id="dwD-DW-kMV"/>
                         <outlet property="cartContainerViewController" destination="Xeh-EB-PaL" id="bHf-1U-5d6"/>
                         <outlet property="informationContainerViewController" destination="Gnx-jH-9vZ" id="Txo-HM-vIv"/>
                         <outlet property="ordersContainerViewConntroller" destination="1IS-ZD-zvv" id="HqU-Zl-0lK"/>
@@ -471,11 +487,11 @@
             <objects>
                 <viewController storyboardIdentifier="CartContainerViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="xQB-SI-ViM" customClass="CartContainerViewController" customModule="DinDin_Food_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XUm-AL-Jmn">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="797"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="779"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="x2r-bJ-Phv">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="695"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="677"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="695" id="gcK-Hq-IF9"/>
@@ -483,7 +499,7 @@
                                 </constraints>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sau-rr-pPo">
-                                <rect key="frame" x="20" y="703" width="374" height="94"/>
+                                <rect key="frame" x="20" y="685" width="374" height="94"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delivery is free" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PeA-v1-5hh">
                                         <rect key="frame" x="15" y="8" width="105" height="20"/>
@@ -531,6 +547,7 @@
                                 </constraints>
                             </view>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="w4e-ug-iCr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="x2r-bJ-Phv" secondAttribute="trailing" id="1yX-U8-ITE"/>
@@ -559,8 +576,9 @@
             <objects>
                 <viewController id="v3I-30-HEV" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bvg-OD-xMq">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="797"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="779"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Toz-M5-HYS"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                 </viewController>
@@ -573,8 +591,9 @@
             <objects>
                 <viewController id="UM8-Fb-6Tc" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Z2F-fL-KDP">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="797"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="779"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="oMM-pk-hJC"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                 </viewController>
@@ -586,6 +605,7 @@
     <resources>
         <image name="card" width="16.666666030883789" height="16.666666030883789"/>
         <image name="cart" width="16.666666030883789" height="16.666666030883789"/>
+        <image name="icons8-back" width="16.666666030883789" height="16.666666030883789"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
