--- a/DinDin Food App/PizzaModule/PizzaViews/PizzaTableViewCell.xib
+++ b/DinDin Food App/PizzaModule/PizzaViews/PizzaTableViewCell.xib
@@ -18,10 +18,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HpS-kt-fyU">
-                        <rect key="frame" x="16" y="16" width="288" height="245"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="261"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="288" id="RiA-SD-7JO"/>
-                            <constraint firstAttribute="height" constant="245" id="jSS-4j-eb8"/>
+                            <constraint firstAttribute="width" constant="320" id="RiA-SD-7JO"/>
+                            <constraint firstAttribute="height" constant="261" id="jSS-4j-eb8"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kah-dW-OQp">
@@ -91,13 +91,13 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="HpS-kt-fyU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="7CI-bq-pyR"/>
+                    <constraint firstItem="HpS-kt-fyU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="7CI-bq-pyR"/>
                     <constraint firstItem="kah-dW-OQp" firstAttribute="top" secondItem="HpS-kt-fyU" secondAttribute="bottom" constant="15" id="7fw-ho-kvN"/>
                     <constraint firstItem="kah-dW-OQp" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="ASi-Ok-3zc"/>
                     <constraint firstItem="kah-dW-OQp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="NEA-TI-Dga"/>
-                    <constraint firstAttribute="trailing" secondItem="HpS-kt-fyU" secondAttribute="trailing" constant="16" id="NhC-He-nre"/>
+                    <constraint firstAttribute="trailing" secondItem="HpS-kt-fyU" secondAttribute="trailing" id="NhC-He-nre"/>
                     <constraint firstAttribute="bottomMargin" secondItem="kah-dW-OQp" secondAttribute="bottom" constant="17" id="nhd-fc-hNX"/>
-                    <constraint firstItem="HpS-kt-fyU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="uzI-cI-D7S"/>
+                    <constraint firstItem="HpS-kt-fyU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="uzI-cI-D7S"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
